@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<?xml-stylesheet type="text/xsl" href="daia.xsl"?>
+<foo xmlns="http://example.org" fooid="7">
+  <d:daia xmlns:d="http://ws.gbv.de/daia/" version="0.5"
+            timestamp="2009-06-09T15:39:52.831+02:00">
+      <doz><d:message lang="en">hello</d:message></doz>
+      <d:institution>贛語</d:institution>
+      <d:document href="http://example.com/document/42" id="my:id:1">
+      </d:document>
+  </d:daia>
+</foo>  
